# vocab-notebook

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
deploy/: Caddyfile  README.md  backup-coredb.sh  coredb.service  provision-vm.sh  setup-vm.sh  vocab-notebook.service
docs/: extraction-cot-plan.md  sentence-grammar-graph-plan.md
src/: auth.rs  db.rs  extract.rs  fetch.rs  main.rs  models.rs  tts.rs
static/: index.html
