[package]
name = "vocab-notebook"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
# 암호화 세션 쿠키(PrivateCookieJar)로 OAuth 로그인 상태 보관
axum-extra = { version = "0.9", features = ["cookie-private"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# CoreDB 접근 + Claude API + Google OAuth 토큰 교환. CoreDB는
# Native Protocol(scylla) 대신 HTTP /query JSON API를 사용한다(src/db.rs 참고).
reqwest = { version = "0.12", features = ["json"] }

# SESSION_SECRET → 64바이트 쿠키 키 유도, 인증 URL 인코딩
sha2 = "0.10"
urlencoding = "2"

# cookie 0.18.1이 time 0.3.37+ 와 컴파일 깨짐 → 호환 버전으로 고정
time = "=0.3.36"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
